grid aspect fixed on safari

--- a/styles/page-new-home.less
+++ b/styles/page-new-home.less
@@ -10,6 +10,7 @@
 
       img {
         border-radius: 10px;
+        width: 100%;
         height: 100%;
       }
 
